[tool.poetry]
name = "ghmeister"
version = "0.1.0"
description = "GitHub Manager"
authors = ["Rob van der Leek <5324924+robvanderleek@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
ghm = "ghmeister.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = "^0.9.0"
requests = "^2.31.0"
pygithub = "^2.1.1"
pyyaml = "^6.0.1"
textual = "^0.42.0"

[tool.poe.tasks.bundle]
help = "Create a binary executable using pyinstaller"
cmd = "pyinstaller --workpath .build --specpath dist -n ghmeister ghmeister/__main__.py"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.2.0"
poethepoet = "^0.24.4"
textual-dev = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
