[project]
name = "ghmeister"
version = "0.1.0"
description = "GitHub Manager"
authors = [{ name = "Rob van der Leek", email = "5324924+robvanderleek@users.noreply.github.com" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0,<0.10",
    "requests>=2.31.0,<3",
    "pyyaml>=6.0.1,<7",
    "python-dotenv>=1.0.1,<2",
    "rich>=13.7.1,<14",
    "sh>=2.0.6,<3",
    "inquirerpy>=0.3.4,<0.4",
    "pydantic>=2.8.2,<3",
]

[project.scripts]
ghm = "ghmeister.__main__:main"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=0.30.1",
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
    "pyinstaller>=6.2.0",
    "termynal>=0.12.1",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.poe.tasks.bundle]
help = "Create a binary executable using pyinstaller"
cmd = "pyinstaller --workpath .build --noconfirm --specpath dist -n ghmeister ghmeister/__main__.py"

[tool.semantic_release]
branch = "main"
version_toml = [ "pyproject.toml:tool.poetry.version" ]
version_variables = [ "ghmeister/version.py:version" ]
upload_to_repository = false
upload_to_release = false
allow_zero_version = true
